# digital_control

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  PROGRESS.md  README.md  UPGRADE_ROADMAP.md  WARP.md  compile_commands.json  controller.h  main.cpp  pid.cpp  pid.h  pidtuner.cpp  pidtuner.h  pidtuner_demo.cpp  plant.cpp  plant.h  resources.rc  sim_pid_first_order.csv  tuned_first_order.json  tuner.cpp  tuner.h
application/: CMakeLists.txt  about_window.cpp  about_window.h  app_gui.cpp  app_gui.h  imgui_layer.cpp  imgui_layer.h  leadlag_tuning_window.cpp  leadlag_tuning_window.h  main.cpp  pid_tuning_window.cpp  pid_tuning_window.h  window_interface.h
core/: exceptions.h  leadlag.cpp  leadlag.h  pid.cpp  tuner.cpp
examples/: CMakeLists.txt  sim_leadlag_first_order.cpp  sim_pid_first_order.cpp  sim_pid_second_order.cpp  tuned_second_order.json
scripts/: create_ico.py  generate_icon.py  plot_sim.py
tests/: CMakeLists.txt  test_integration.cpp  test_leadlag.cpp  test_pid.cpp  test_plant.cpp
